--- a/web/package.json
+++ b/web/package.json
@@ -27,8 +27,26 @@
   "dependencies": {
     "apollo-client": "^0.3.29",
     "react": "^15.2.1",
+    "react-addons-perf": "^15.2.1",
     "react-apollo": "^0.3.15",
+    "react-bootstrap": "^0.29.5",
+    "react-dom": "^15.2.1",
+    "react-helmet": "^3.1.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
     "redux": "^3.5.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.7",
+    "eslint": "^3.0.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-react": "^5.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.1",
+    "webpack-merge": "^0.14.0"
   }
 }
