--- a/web/package.json
+++ b/web/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "garden-aid-web",
-  "description": "Web frontend for Garden Aid project",
-  "author": "John McKim <johncmckim@gmail.com> (http://github.com/johncmckim)",
+  "name": "react-redux-universal-hot-example",
+  "description": "Example of an isomorphic (universal) webapp using react redux and hot reloading",
+  "author": "Erik Rasmussen <rasmussenerik@gmail.com> (http://github.com/erikras)",
   "license": "MIT",
   "version": "0.9.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/johncmckim/garden-aid"
+    "url": "https://github.com/erikras/react-redux-universal-hot-example"
   },
-  "homepage": "https://github.com/johncmckim/garden-aid",
+  "homepage": "https://github.com/erikras/react-redux-universal-hot-example",
   "keywords": [
+    "react",
+    "isomorphic",
+    "universal",
+    "webpack",
+    "express",
+    "hot reloading",
+    "react-hot-reloader",
+    "redux",
+    "starter",
+    "boilerplate",
+    "babel"
   ],
   "main": "bin/server.js",
   "scripts": {
-    "start": "npm run start-prod",
+    "start": "concurrent --kill-others \"npm run start-prod\" \"npm run start-prod-api\"",
     "start-prod": "better-npm-run start-prod",
     "start-prod-api": "better-npm-run start-prod-api",
     "build": "better-npm-run build",
@@ -37,12 +48,28 @@
         "APIPORT": 3030
       }
     },
+    "start-prod-api": {
+      "command": "node ./bin/api.js",
+      "env": {
+        "NODE_PATH": "./api",
+        "NODE_ENV": "production",
+        "APIPORT": 3030
+      }
+    },
     "start-dev": {
       "command": "node ./bin/server.js",
       "env": {
         "NODE_PATH": "./src",
         "NODE_ENV": "development",
         "PORT": 3000,
+        "APIPORT": 3030
+      }
+    },
+    "start-dev-api": {
+      "command": "node ./bin/api.js",
+      "env": {
+        "NODE_PATH": "./api",
+        "NODE_ENV": "development",
         "APIPORT": 3030
       }
     },
