Finally settle on a webpack config update to serverless alpha 2

--- a/web-bff/serverless.env.yaml
+++ b/web-bff/serverless.env.yaml
@@ -6,7 +6,8 @@ stages:
             us-east-1:
                 vars:
                     iamRoleArnLambda: >-
-                        arn:aws:iam::222685691406:role/web-bff-dev-IamRoleLambda-1GD1AEHTLFEXL
+                        arn:aws:iam::222685691406:role/web-bff-dev-IamRoleLambda-4HNL1XP65DK8
+                    serverlessDeploymentBucketName: web-bff-dev-serverlessdeploymentbucket-td99gn6afiw7
     prod:
         vars: null
         regions:
