--- a/web/.babelrc
+++ b/web/.babelrc
@@ -1,25 +1,12 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
-
+  "presets": ["react", "es2015" , "stage-0"],
   "plugins": [
-    "transform-runtime",
-    "add-module-exports",
     "transform-decorators-legacy",
-    "transform-react-display-name"
+    "transform-object-rest-spread"
   ],
-
   "env": {
-    "development": {
-      "plugins": [
-        "typecheck",
-        ["react-transform", {
-            "transforms": [{
-                "transform": "react-transform-catch-errors",
-                "imports": ["react", "redbox-react"]
-              }
-            ]
-        }]
-      ]
+    "start": {
+      "presets": ["react-hmre"]
     }
   }
 }
