Refactor scripts and start creating device certificates

--- a/iot-hub/serverless.env.yaml
+++ b/iot-hub/serverless.env.yaml
@@ -5,3 +5,6 @@ stages:
         regions:
             us-east-1:
                 vars:
+                    iamRoleArnLambda: >-
+                        arn:aws:iam::222685691406:role/iot-hub-dev-IamRoleLambda-139ZZKXHJUXWY
+                    serverlessDeploymentBucketName: iot-hub-dev-serverlessdeploymentbucket-1uqrxhddzj4xb
