Start testing sending data to IoT hub

--- a/chat-bff/serverless.yaml
+++ b/chat-bff/serverless.yaml
@@ -1,5 +1,6 @@
-service: chat-bff
+service: garden-aid-chat-bff
 provider: aws
+runtime: nodejs4.3
 functions:
     hello:
         handler: handler.hello
