Fix cloudformation for iot hub

--- a/iot-hub/package.json
+++ b/iot-hub/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/johncmckim/garden-aid#readme",
   "devDependencies": {
-    "aws-iot-device-sdk": "^1.0.12"
+    "aws-iot-device-sdk": "^1.0.12",
+    "lodash": "^4.14.1"
   }
 }
