--- a/iot-hub/serverless.env.yaml
+++ b/iot-hub/serverless.env.yaml
@@ -16,4 +16,4 @@ stages:
           sensorThingClientResource: >-
             arn:aws:iot:us-east-1:222685691406:client/${iot:ClientId}
           sensorThingSoilTopicResource: >-
-            arn:aws:iot:us-east-1:222685691406:garden/soil/moisture/${iot:ClientId}
+            arn:aws:iot:us-east-1:222685691406:topic/garden/soil/moisture
