--- a/web/package.json
+++ b/web/package.json
@@ -67,6 +67,11 @@
     "webpack-stream": "^3.2.0"
   },
   "devDependencies": {
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "json-loader": "^0.5.4",
     "rimraf": "^2.5.3"
   }
 }
