--- a/web-bff/package.json
+++ b/web-bff/package.json
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/johncmckim/garden-aid#readme",
   "dependencies": {
     "graphql": "^0.6.1",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "vogels": "^2.2.0"
   },
   "devDependencies": {
     "assert": "^1.4.1",
