--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "start": "rimraf dist && NODE_ENV=development node bin/server.js",
     "start:prod": "NODE_ENV=production node bin/server.js",
     "build": "rimraf dist && NODE_ENV=production webpack --progress --verbose --display-error-details --config webpack/common.config.js",
+    "build:watch": "rimraf dist && webpack --progress --verbose --display-error-details --watch --config webpack/common.config.js",
     "build:analyze": "NODE_ENV=production webpack --json --config webpack/common.config.js | webpack-bundle-size-analyzer > logs/build-analyze.log",
     "test": "NODE_PATH=./app mocha --require ./bin/test.js 'app/**/*spec.js'",
     "test:watch": "npm run test -- --watch"
@@ -33,6 +34,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.15.2",
+    "chart.js": "^2.2.1",
     "cors": "^2.7.1",
     "css-loader": "^0.23.1",
     "del": "^2.2.1",
@@ -51,6 +53,8 @@
     "postcss-loader": "^0.9.1",
     "react": "^15.2.1",
     "react-apollo": "^0.3.19",
+    "react-bootstrap": "^0.30.2",
+    "react-chartjs-2": "^1.1.7",
     "react-helmet": "^3.1.0",
     "react-router": "^2.6.0",
     "react-router-redux": "^4.0.5",
