--- a/web-bff/package.json
+++ b/web-bff/package.json
@@ -25,9 +25,11 @@
   },
   "homepage": "https://github.com/johncmckim/garden-aid#readme",
   "dependencies": {
+    "bluebird": "^3.4.1",
     "graphql": "^0.6.1",
     "lodash": "^4.13.1",
-    "vogels": "^2.2.0"
+    "vogels": "^2.2.0",
+    "vogels-promisified": "^2.2.3"
   },
   "devDependencies": {
     "assert": "^1.4.1",
