--- a/web-bff/package.json
+++ b/web-bff/package.json
@@ -6,7 +6,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "vows test/* --spec"
+    "test": "istanbul cover _mocha tests/all -- -R spec --recursive"
   },
   "repository": {
     "type": "git",
@@ -27,13 +27,19 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "graphql": "^0.6.1",
+    "joi": "^9.0.4",
     "lodash": "^4.13.1",
+    "util": "^0.10.3",
     "vogels": "^2.2.0",
     "vogels-promisified": "^2.2.3"
   },
   "devDependencies": {
-    "assert": "^1.4.1",
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.4",
     "lambda-wrapper": "^0.1.0",
-    "vows": "^0.8.1"
+    "mocha": "^2.5.3",
+    "mocha-lcov-reporter": "^1.2.0",
+    "mock-require": "^1.3.0",
+    "sinon": "^1.17.5"
   }
 }
