--- a/web-bff/package.json
+++ b/web-bff/package.json
@@ -29,6 +29,7 @@
     "graphql": "^0.6.1",
     "joi": "^9.0.4",
     "lodash": "^4.13.1",
+    "moment": "^2.14.1",
     "util": "^0.10.3",
     "vogels": "^2.2.0",
     "vogels-promisified": "^2.2.3"
