Add deployment scripts and get dynamodb working

--- a/iot-hub/serverless.yaml
+++ b/iot-hub/serverless.yaml
@@ -2,15 +2,10 @@ service: garden-aid-iot-hub
 provider: aws
 runtime: nodejs4.3
 variableSyntax: '\${{([\s\S]+?)}}'
-defaults: # overwrite defaults
+defaults:
   stage: dev
-  region: us-east-1
-  memory: 128
-  timeout: 3
+  region: ap-southeast-2
 package:
-  include:
-    # - node_modules # we don't have any node_modules right now
-    - src
   exclude:
     - test
     - node_modules
@@ -94,18 +89,6 @@ resources:
       Properties:
         ThingName: { Ref: SensorThing }
         Principal: ${{iotCertificateArn}}
-
-    SensorPolicyPrincipalAttachmentCert2:
-      Type: AWS::IoT::PolicyPrincipalAttachment
-      Properties:
-        PolicyName: { Ref: SensorThingPolicy }
-        Principal: ${{iotCertificateArn2}}
-
-    SensorThingPrincipalAttachmentCert2:
-      Type: "AWS::IoT::ThingPrincipalAttachment"
-      Properties:
-        ThingName: { Ref: SensorThing }
-        Principal: ${{iotCertificateArn2}}
 
     IotThingRole:
        Type: AWS::IAM::Role
