--- a/web-bff/serverless.env.yaml
+++ b/web-bff/serverless.env.yaml
@@ -3,13 +3,10 @@ stages:
     dev:
         vars: null
         regions:
-            us-east-1:
-                vars:
-                    iamRoleArnLambda: >-
-                        arn:aws:iam::222685691406:role/web-bff-dev-IamRoleLambda-4HNL1XP65DK8
-                    serverlessDeploymentBucketName: web-bff-dev-serverlessdeploymentbucket-td99gn6afiw7
+            ap-southeast-2:
+                vars: null
     prod:
         vars: null
         regions:
-            us-east-1:
+            ap-southeast-2:
                 vars: null
