--- a/web-bff/serverless.yaml
+++ b/web-bff/serverless.yaml
@@ -2,9 +2,21 @@ service: garden-aid-web-bff
 provider:
     name: aws
     runtime: nodejs4.3
-defaults: # overwrite defaults
+    iamRoleStatements:
+       -  Effect: Allow
+          Action:
+            - dynamodb:DescribeTable
+            - dynamodb:Query
+            - dynamodb:Scan
+            - dynamodb:GetItem
+            - dynamodb:PutItem
+            - dynamodb:UpdateItem
+            - dynamodb:DeleteItem
+          Resource: "arn:aws:dynamodb:ap-southeast-2:*:*"
+
+defaults:
     stage: dev
-    region: us-east-1
+    region: ap-southeast-2
 package:
     include:
       - index.js
