--- a/iot-hub/package.json
+++ b/iot-hub/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "snyk test"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/johncmckim/garden-aid#readme",
   "devDependencies": {
     "aws-iot-device-sdk": "^1.0.12",
-    "lodash": "^4.14.1"
+    "lodash": "^4.14.1",
+    "snyk": "^1.18.0"
   }
 }
