--- a/web-bff/package.json
+++ b/web-bff/package.json
@@ -6,7 +6,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "istanbul cover _mocha tests/all -- -R spec --recursive"
+    "test": "snyk test && istanbul cover _mocha tests/all -- -R spec --recursive"
   },
   "repository": {
     "type": "git",
@@ -41,6 +41,7 @@
     "mocha": "^2.5.3",
     "mocha-lcov-reporter": "^1.2.0",
     "mock-require": "^1.3.0",
-    "sinon": "^1.17.5"
+    "sinon": "^1.17.5",
+    "snyk": "^1.18.0"
   }
 }
