--- a/iot-hub/serverless.yaml
+++ b/iot-hub/serverless.yaml
@@ -1,10 +1,11 @@
 service: garden-aid-iot-hub
-provider: aws
-runtime: nodejs4.3
-variableSyntax: '\${{([\s\S]+?)}}'
+provider:
+    name: aws
+    runtime: nodejs4.3
 defaults:
   stage: dev
   region: ap-southeast-2
+variableSyntax: '\${{([\s\S]+?)}}' #will be moved to defaults
 package:
   exclude:
     - test
