--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
     - AWS_REGION=ap-southeast-2
 
 before_install:
+  - npm i -g snyk
   - npm i -g serverless@1.0.0-beta.1
 
 script: ./deploy-all.sh
